--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,134 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>🕵️ Detective Case Manager</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Detective Case Manager</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
     <h1>Detective Case Manager</h1>
+
+    <!-- Case Form -->
     <div class="form">
-      <input id="title" placeholder="Case Title" />
-      <textarea id="desc" placeholder="Case Description"></textarea>
-      <button onclick="createCase()">Add Case</button>
+      <h2>Add New Case</h2>
+      <input type="text" id="caseTitle" placeholder="Case Title" required />
+      <textarea id="caseDescription" placeholder="Case Description" required></textarea>
+      <button onclick="addCase()">Add Case</button>
     </div>
-    <ul id="cases" class="card-list"></ul>
+
+    <!-- Case List -->
+    <ul id="caseList" class="card-list"></ul>
   </div>
 
   <script>
-    const api = "http://localhost:5000";
-
-    function createElementFromHTML(htmlString) {
-      const div = document.createElement('div');
-      div.innerHTML = htmlString.trim();
-      return div.firstChild;
-    }
+    const backendUrl = "http://localhost:5000";
 
     async function fetchCases() {
-      const res = await fetch(`${api}/cases`);
-      const data = await res.json();
-      const ul = document.getElementById("cases");
-      ul.innerHTML = '';
-      for (let c of data) {
-        const clues = await fetch(`${api}/clues/${c._id}`).then(r => r.json());
-        const suspects = await fetch(`${api}/suspects/${c._id}`).then(r => r.json());
-
-        const li = createElementFromHTML(`
-          <li class="card" id="case-${c._id}">
-            <h2 contenteditable="true" class="editable title">${c.title}</h2>
-            <p contenteditable="true" class="editable desc">${c.description}</p>
-            <div class="section clues">
-              <h4>Clues</h4>
-              <ul>
-                ${clues.map(clue => `<li>${clue.detail}</li>`).join('')}
-              </ul>
-              <input placeholder="New Clue" id="clue-${c._id}" />
-              <button onclick="addClue('${c._id}')">Add Clue</button>
-            </div>
-            <div class="section suspects">
-              <h4>Suspects</h4>
-              <ul>
-                ${suspects.map(s => `<li>${s.name}</li>`).join('')}
-              </ul>
-              <input placeholder="New Suspect" id="suspect-${c._id}" />
-              <button onclick="addSuspect('${c._id}')">Add Suspect</button>
-            </div>
-            <div class="actions">
-              <button onclick="updateCase('${c._id}')">Save</button>
-              <button onclick="deleteCase('${c._id}')">Delete</button>
-            </div>
-          </li>
-        `);
-
-        ul.appendChild(li);
+      try {
+        const res = await fetch(`${backendUrl}/cases`);
+        const cases = await res.json();
+        document.getElementById("caseList").innerHTML = "";
+        cases.forEach(renderCase);
+      } catch (err) {
+        console.error("Error fetching cases:", err);
       }
     }
 
-    async function createCase() {
-      const titleInput = document.getElementById("title");
-      const descInput = document.getElementById("desc");
-      const title = titleInput.value;
-      const description = descInput.value;
+    async function addCase() {
+      const title = document.getElementById("caseTitle").value.trim();
+      const description = document.getElementById("caseDescription").value.trim();
       if (!title || !description) return;
 
-      const res = await fetch(`${api}/cases`, {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ title, description })
-      });
-      const newCase = await res.json();
-
-      // Reset form
-      titleInput.value = '';
-      descInput.value = '';
-
-      fetchCases();
+      try {
+        const res = await fetch(`${backendUrl}/cases`, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ title, description }),
+        });
+        const newCase = await res.json();
+        if (newCase && newCase.id) {
+          renderCase(newCase);
+        }
+        document.getElementById("caseTitle").value = "";
+        document.getElementById("caseDescription").value = "";
+      } catch (err) {
+        console.error("Failed to add case:", err);
+      }
     }
 
-    async function updateCase(id) {
-      const card = document.getElementById(`case-${id}`);
-      const title = card.querySelector(".title").textContent;
-      const description = card.querySelector(".desc").textContent;
+    function renderCase(c) {
+      if (!c.id || !c.title || !c.description) {
+        console.warn("Skipping invalid case:", c);
+        return;
+      }
 
-      await fetch(`${api}/cases/${id}`, {
-        method: 'PUT',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ title, description })
-      });
+      const li = document.createElement("li");
+      li.className = "card";
+      li.innerHTML = `
+        <h2 class="title">${c.title}</h2>
+        <p class="desc">${c.description}</p>
+
+        <div class="section">
+          <h4>Clues</h4>
+          <ul id="clueList-${c.id}"></ul>
+          <input type="text" id="clueInput-${c.id}" placeholder="Add a clue" />
+          <button onclick="addClue('${c.id}')">Add Clue</button>
+        </div>
+
+        <div class="section">
+          <h4>Suspects</h4>
+          <ul id="suspectList-${c.id}"></ul>
+          <input type="text" id="suspectInput-${c.id}" placeholder="Add a suspect" />
+          <button onclick="addSuspect('${c.id}')">Add Suspect</button>
+        </div>
+
+        <div class="actions">
+          <button onclick="deleteCase('${c.id}')">Delete Case</button>
+        </div>
+      `;
+      document.getElementById("caseList").appendChild(li);
+      fetchClues(c.id);
+      fetchSuspects(c.id);
     }
 
     async function deleteCase(id) {
-      await fetch(`${api}/cases/${id}`, { method: 'DELETE' });
-      document.getElementById(`case-${id}`).remove();
+      await fetch(`${backendUrl}/cases/${id}`, { method: "DELETE" });
+      fetchCases();
+    }
+
+    async function fetchClues(caseId) {
+      try {
+        const res = await fetch(`${backendUrl}/clues/${caseId}`);
+        const clues = await res.json();
+        const ul = document.getElementById(`clueList-${caseId}`);
+        ul.innerHTML = "";
+        clues.forEach(clue => {
+          const li = document.createElement("li");
+          li.textContent = clue.detail;
+          ul.appendChild(li);
+        });
+      } catch (err) {
+        console.error("Failed to fetch clues for case", caseId, err);
+      }
     }
 
     async function addClue(caseId) {
-      const input = document.getElementById(`clue-${caseId}`);
-      const detail = input.value;
-      if (!detail) return;
-
-      await fetch(`${api}/clues`, {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ case_id: caseId, detail })
+      const input = document.getElementById(`clueInput-${caseId}`);
+      const text = input.value.trim();
+      if (!text) return;
+      await fetch(`${backendUrl}/clues`, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ case_id: caseId, detail: text }),
       });
-      fetchCases();
+      input.value = "";
+      fetchClues(caseId);
+    }
+
+    async function fetchSuspects(caseId) {
+      try {
+        const res = await fetch(`${backendUrl}/suspects/${caseId}`);
+        const suspects = await res.json();
+        const ul = document.getElementById(`suspectList-${caseId}`);
+        ul.innerHTML = "";
+        suspects.forEach(suspect => {
+          const li = document.createElement("li");
+          li.textContent = suspect.name;
+          ul.appendChild(li);
+        });
+      } catch (err) {
+        console.error("Failed to fetch suspects for case", caseId, err);
+      }
     }
 
     async function addSuspect(caseId) {
-      const input = document.getElementById(`suspect-${caseId}`);
-      const name = input.value;
+      const input = document.getElementById(`suspectInput-${caseId}`);
+      const name = input.value.trim();
       if (!name) return;
-
-      await fetch(`${api}/suspects`, {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ case_id: caseId, name })
+      await fetch(`${backendUrl}/suspects`, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ case_id: caseId, name }),
       });
-      fetchCases();
+      input.value = "";
+      fetchSuspects(caseId);
     }
 
+    // Initial load
     fetchCases();
   </script>
 </body>
